--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -32,6 +32,7 @@ plib = py3_inst.extension_module('native_step',
         'llvm.cpp',
         'llvm_dumper.cpp',
         'llvm_common.cpp',
+        'ir_reader.cpp',
         'test.cpp'),
   dependencies: [log_dep, py3_inst.dependency(), graph_dep, llvm_dep]
 )
