step: add BBSplit step + test case

--- a/test/native_step_test/meson.build
+++ b/test/native_step_test/meson.build
@@ -1,5 +1,11 @@
-test('native_steps',
-        py3_inst,
-        args : files('native_steps.py'),
-        env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
+test('native-steps',
+  py3_inst,
+  args : files('native_steps.py'),
+  env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
+)
+
+test('bb-split',
+  py3_inst,
+  args: [files('bb_split.py'), 'freertos', gpslogger_targets],
+  env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
