--- a/test/native_step_test/meson.build
+++ b/test/native_step_test/meson.build
@@ -9,3 +9,9 @@ test('bb-split',
   args: [files('bb_split.py'), 'freertos', gpslogger_targets],
   env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
+
+test('fn-single-exit',
+  py3_inst,
+  args: [files('fn_single_exit.py'), 'freertos', freertos_multi_exit],
+  env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
+)
