--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -1,7 +1,17 @@
 native_step_pyx_cpp = custom_target('native_step_pyx',
   output : ['native_step_pyx.cpp'],
-  input : files('native_step.pyx'),
-  command : [cython, '-I', graph_cython_inc, '@INPUT@', '-o', '@OUTPUT@'] + cython_flags,
+  input : files('native_step.pyx',
+                'DetectInteractions.pxd',
+                'FreeRTOSinstances.pxd',
+                'IntermediateAnalysis.pxd',
+                'Validation.pxd',
+                'bb_split.pxd',
+                'cstep.pxd',
+                'ir_reader.pxd',
+                'llvm.pxd',
+                'test.pxd',
+                'warning.pxd'),
+  command : [cython, '-I', graph_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
 )
 
 py_logging_pyx_cpp = custom_target('py_logging_pyx',
@@ -25,17 +35,18 @@ log_dep = declare_dependency(
 
 plib = py3_inst.extension_module('native_step',
   native_step_pyx_cpp,
-  files('FreeRTOSinstances.cpp',
-        'DetectInteractions.cpp',
-        'Validation.cpp',
+  files('DetectInteractions.cpp',
+        'FreeRTOSinstances.cpp',
         'IntermediateAnalysis.cpp',
-        'llvm.cpp',
-        'llvm_dumper.cpp',
-        'llvm_common.cpp',
+        'Validation.cpp',
+        'bb_split.cpp',
         'ir_reader.cpp',
-        'test/test.cpp',
-        'test/BBSplitTest.cpp',
-        'bb_split.cpp'),
+        'llvm.cpp',
+        'llvm_common.cpp',
+        'llvm_dumper.cpp',
+        'test/bb_split_test.cpp',
+        'test/comp_insert_test.cpp',
+        'test/test.cpp'),
   dependencies: [log_dep, py3_inst.dependency(), graph_dep, llvm_dep]
 )
 
