add CompInsertStep + testcase

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -6,6 +6,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                 'IntermediateAnalysis.pxd',
                 'Validation.pxd',
                 'bb_split.pxd',
+                'comp_insert.pxd',
                 'cstep.pxd',
                 'ir_reader.pxd',
                 'llvm.pxd',
@@ -40,6 +41,7 @@ plib = py3_inst.extension_module('native_step',
         'IntermediateAnalysis.cpp',
         'Validation.cpp',
         'bb_split.cpp',
+        'comp_insert.cpp',
         'ir_reader.cpp',
         'llvm.cpp',
         'llvm_common.cpp',
