--- a/test/native_step_test/meson.build
+++ b/test/native_step_test/meson.build
@@ -9,3 +9,9 @@ test('bb-split',
   args: [files('run_test_step.py'), 'freertos', 'BBSplitTest', gpslogger_targets],
   env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
+
+test('comp-insert',
+  py3_inst,
+  args: [files('run_test_step.py'), 'freertos', 'CompInsertTest', gpslogger_targets],
+  env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
+)
