--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -8,6 +8,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                 'bb_split.pxd',
                 'comp_insert.pxd',
                 'cstep.pxd',
+                'fn_single_exit.pxd',
                 'ir_reader.pxd',
                 'llvm.pxd',
                 'test.pxd',
