native_step.pyx: remove one indirection

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -1,10 +1,10 @@
 native_step_pyx_cpp = custom_target('native_step_pyx',
   output : ['native_step_pyx.cpp'],
   input : files('native_step.pyx',
-                'DetectInteractions.pxd',
-                'FreeRTOSinstances.pxd',
-                'IntermediateAnalysis.pxd',
-                'Validation.pxd',
+                'detect_interactions.pxd',
+                'freertos_instances.pxd',
+                'intermediate_analysis.pxd',
+                'validation.pxd',
                 'bb_split.pxd',
                 'comp_insert.pxd',
                 'cstep.pxd',
@@ -37,10 +37,10 @@ log_dep = declare_dependency(
 
 plib = py3_inst.extension_module('native_step',
   native_step_pyx_cpp,
-  files('DetectInteractions.cpp',
-        'FreeRTOSinstances.cpp',
-        'IntermediateAnalysis.cpp',
-        'Validation.cpp',
+  files('detect_interactions.cpp',
+        'freertos_instances.cpp',
+        'intermediate_analysis.cpp',
+        'validation.cpp',
         'bb_split.cpp',
         'comp_insert.cpp',
         'fn_single_exit.cpp',
