--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -6,6 +6,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                 'intermediate_analysis.pxd',
                 'validation.pxd',
                 'bb_split.pxd',
+                'cdummy.pxd',
                 'comp_insert.pxd',
                 'cstep.pxd',
                 'fn_single_exit.pxd',
@@ -42,6 +43,7 @@ plib = py3_inst.extension_module('native_step',
         'intermediate_analysis.cpp',
         'validation.cpp',
         'bb_split.cpp',
+        'cdummy.cpp',
         'comp_insert.cpp',
         'fn_single_exit.cpp',
         'ir_reader.cpp',
