--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -12,6 +12,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                 'fn_single_exit.pxd',
                 'ir_reader.pxd',
                 'llvm.pxd',
+                'llvm_map.pxd',
                 'test.pxd',
                 'warning.pxd'),
   command : [cython, '-I', graph_cython_inc, '@INPUT0@', '-o', '@OUTPUT@'] + cython_flags,
@@ -50,6 +51,7 @@ plib = py3_inst.extension_module('native_step',
         'llvm.cpp',
         'llvm_common.cpp',
         'llvm_dumper.cpp',
+        'llvm_map.cpp',
         'test/bb_split_test.cpp',
         'test/comp_insert_test.cpp',
         'test/fn_single_exit_test.cpp',
