libgraph: introduce new graph model
Currently, both models can be used in parallel. The new model is at
beginning of graph.h, the old model at the end. The old graph class
(graph::Graph) holds an instance to the new class.

Different changes in the python wrapper were also needed, since
ara::graph::Graph is not copyable anymore. graph::Graph needed therefore
be wrapped into a shared_ptr.

The new API has no Python wrapper yet.

--- a/libgraph/meson.build
+++ b/libgraph/meson.build
@@ -8,7 +8,7 @@ graph_pyx_cpp = custom_target('graph_pyx',
 
 libgraph = py3_inst.extension_module('graph',
 	'graph.h', graph_pyx_cpp, 'graph.cc',
-	dependencies : [py3_inst.dependency(), llvm_dep]
+	dependencies : [py3_inst.dependency(), llvm_dep, boost_dep]
 )
 
 graph_inc = include_directories('.')
