--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,7 @@ py3_mod = import('python')
 py3_inst = py3_mod.find_installation('python3')
 
 llvm_dep = dependency('llvm', version : ['>=7', '<8'])
+boost_dep = dependency('boost', modules : ['graph'])
 
 cython_flags = ['-Wextra', '--cplus', '-3']
 
