llvm_map_test: dummy

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -50,13 +50,14 @@ plib = py3_inst.extension_module('native_step',
         'fn_single_exit.cpp',
         'ir_reader.cpp',
         'llvm.cpp',
-		'llvm_basic_optimization.cpp',
+        'llvm_basic_optimization.cpp',
         'llvm_common.cpp',
         'llvm_dumper.cpp',
         'llvm_map.cpp',
         'test/bb_split_test.cpp',
         'test/comp_insert_test.cpp',
         'test/fn_single_exit_test.cpp',
+        'test/llvm_map_test.cpp',
         'test/test.cpp'),
   dependencies: [log_dep, py3_inst.dependency(), graph_dep, llvm_dep]
 )
