--- a/test/native_step_test/meson.build
+++ b/test/native_step_test/meson.build
@@ -21,3 +21,9 @@ test('fn-single-exit',
   args: [files('run_test_step.py'), 'freertos', 'FnSingleExitTest', freertos_multi_exit],
   env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
+
+test('llvm-map',
+  py3_inst,
+  args: [files('run_test_step.py'), 'freertos', 'LLVMMapTest', freertos_multi_exit],
+  env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
+)
