--- a/test/meson.build
+++ b/test/meson.build
@@ -6,61 +6,61 @@ test('dependency_resolving',
 
 test('priority_inversion',
         py3_inst,
-        args : [files('validation.py'), 'freertos', files('priority_inversion.json'), freertos_priority_inversion],
+        args : [files('validation.py'), 'FreeRTOS', files('priority_inversion.json'), freertos_priority_inversion],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
 test('invalid_mutex',
         py3_inst,
-        args : [files('validation.py'), 'freertos', files('invalid_mutex.json'), freertos_invalid_mutex],
+        args : [files('validation.py'), 'FreeRTOS', files('invalid_mutex.json'), freertos_invalid_mutex],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
 test('start_scheduler_relation',
         py3_inst,
-        args : [files('start_scheduler_relation.py'), 'freertos', files('start_scheduler_relation.json'), freertos_start_scheduler_relation],
+        args : [files('start_scheduler_relation.py'), 'FreeRTOS', files('start_scheduler_relation.json'), freertos_start_scheduler_relation],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
 test('topological_sort',
         py3_inst,
-        args : [files('topological_sort.py'), 'freertos', files('topological_sort.json'), freertos_topological_sort],
+        args : [files('topological_sort.py'), 'FreeRTOS', files('topological_sort.json'), freertos_topological_sort],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
 test('deadlock',
         py3_inst,
-        args : [files('validation.py'), 'freertos', files('deadlock.json'), freertos_deadlock],
+        args : [files('validation.py'), 'FreeRTOS', files('deadlock.json'), freertos_deadlock],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
 test('invalid_semaphore',
         py3_inst,
-        args : [files('validation.py'), 'freertos', files('invalid_semaphore.json'), freertos_invalid_semaphore],
+        args : [files('validation.py'), 'FreeRTOS', files('invalid_semaphore.json'), freertos_invalid_semaphore],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
 test('eventlist_warning',
         py3_inst,
-        args : [files('validation.py'), 'freertos', files('eventgroup.json'), freertos_eventgroup],
+        args : [files('validation.py'), 'FreeRTOS', files('eventgroup.json'), freertos_eventgroup],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
 test('critical_region_detection',
         py3_inst,
-        args : [files('validation.py'), 'freertos', files('critical_region_detection.json'), freertos_critical_region_detection],
+        args : [files('validation.py'), 'FreeRTOS', files('critical_region_detection.json'), freertos_critical_region_detection],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
         # TODO Test auf ABB3 nicht im kritischen Bereich
 )
 
 test('invalid_isr_syscall',
         py3_inst,
-        args : [files('validation.py'), 'freertos', files('invalid_isr_syscall.json'), freertos_invalid_isr_syscall],
+        args : [files('validation.py'), 'FreeRTOS', files('invalid_isr_syscall.json'), freertos_invalid_isr_syscall],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 test('loop_detection',
         py3_inst,
-        args : [files('loop_detection.py'), 'freertos', files('loop_detection.json'), freertos_loop_detection],
+        args : [files('loop_detection.py'), 'FreeRTOS', files('loop_detection.json'), freertos_loop_detection],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
@@ -72,18 +72,18 @@ test('oil-parsing',
 
 test('ir-reader',
   py3_inst,
-  args: [files('ir_reader.py'), 'freertos', files('empty.json'), gpslogger_targets],
+  args: [files('ir_reader.py'), 'FreeRTOS', files('empty.json'), gpslogger_targets],
   env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 test('ir-reader-false-syntax',
   py3_inst,
-  args: [files('ir_reader.py'), 'freertos', files('empty.json'), gpslogger_targets, files('ir_reader.false_syntax.ll')],
+  args: [files('ir_reader.py'), 'FreeRTOS', files('empty.json'), gpslogger_targets, files('ir_reader.false_syntax.ll')],
   should_fail: true,
   env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 test('ir-reader-multiple-symbols',
   py3_inst,
-  args: [files('ir_reader.py'), 'freertos', files('empty.json'), gpslogger_targets, files('ir_reader.multiple_symbols.ll')],
+  args: [files('ir_reader.py'), 'FreeRTOS', files('empty.json'), gpslogger_targets, files('ir_reader.multiple_symbols.ll')],
   should_fail: true,
   env: ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
