tests: add multiple-configured-steps
Tests if the Solver and ConfigManager work correctly.

--- a/test/meson.build
+++ b/test/meson.build
@@ -1,28 +1,34 @@
-test('dependency_resolving',
+test('dependency-resolving',
         py3_inst,
         args : files('dependency_resolving.py'),
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
-test('priority_inversion',
+test('multiple-configured-steps',
+        py3_inst,
+        args : files('multiple_configured_steps.py'),
+        env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
+)
+
+test('priority-inversion',
         py3_inst,
         args : [files('validation.py'), 'FreeRTOS', files('priority_inversion.json'), freertos_priority_inversion],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
-test('invalid_mutex',
+test('invalid-mutex',
         py3_inst,
         args : [files('validation.py'), 'FreeRTOS', files('invalid_mutex.json'), freertos_invalid_mutex],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
-test('start_scheduler_relation',
+test('start-scheduler-relation',
         py3_inst,
         args : [files('start_scheduler_relation.py'), 'FreeRTOS', files('start_scheduler_relation.json'), freertos_start_scheduler_relation],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
-test('topological_sort',
+test('topological-sort',
         py3_inst,
         args : [files('topological_sort.py'), 'FreeRTOS', files('topological_sort.json'), freertos_topological_sort],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
@@ -34,31 +40,31 @@ test('deadlock',
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
-test('invalid_semaphore',
+test('invalid-semaphore',
         py3_inst,
         args : [files('validation.py'), 'FreeRTOS', files('invalid_semaphore.json'), freertos_invalid_semaphore],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
-test('eventlist_warning',
+test('eventlist-warning',
         py3_inst,
         args : [files('validation.py'), 'FreeRTOS', files('eventgroup.json'), freertos_eventgroup],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
 
-test('critical_region_detection',
+test('critical-region-detection',
         py3_inst,
         args : [files('validation.py'), 'FreeRTOS', files('critical_region_detection.json'), freertos_critical_region_detection],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
         # TODO Test auf ABB3 nicht im kritischen Bereich
 )
 
-test('invalid_isr_syscall',
+test('invalid-isr-syscall',
         py3_inst,
         args : [files('validation.py'), 'FreeRTOS', files('invalid_isr_syscall.json'), freertos_invalid_isr_syscall],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
-test('loop_detection',
+test('loop-detection',
         py3_inst,
         args : [files('loop_detection.py'), 'FreeRTOS', files('loop_detection.json'), freertos_loop_detection],
         env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
