--- a/libgraph/meson.build
+++ b/libgraph/meson.build
@@ -7,8 +7,8 @@ graph_pyx_cpp = custom_target('graph_pyx',
 )
 
 libgraph = py3_inst.extension_module('graph',
-	'graph.h', graph_pyx_cpp, 'graph.cc', 'cfg.cpp',
-	dependencies : [py3_inst.dependency(), llvm_dep, boost_dep]
+	graph_pyx_cpp, 'graph.cc', 'cfg.cpp',
+	dependencies : [py3_inst.dependency(), llvm_dep, boost_dep, common_dep]
 )
 
 graph_inc = include_directories('.')
