--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -11,6 +11,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
                 'comp_insert.pxd',
                 'cstep.pxd',
                 'fn_single_exit.pxd',
+                'icfg.pxd',
                 'ir_reader.pxd',
                 'llvm.pxd',
                 'llvm_basic_optimization.pxd',
@@ -50,6 +51,7 @@ plib = py3_inst.extension_module('native_step',
         'cdummy.cpp',
         'comp_insert.cpp',
         'fn_single_exit.cpp',
+        'icfg.cpp',
         'ir_reader.cpp',
         'llvm.cpp',
         'llvm_basic_optimization.cpp',
