add bgl python layer
Wrapper between python and bgl, not tested yet.

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -33,6 +33,7 @@ foreach app : ['a',
                'deadlock',
                'dominator',
                'eventgroup',
+               'icfg',
                'invalid_mutex',
                'priority_inversion',
                'critical_region_detection',
