--- a/meson.build
+++ b/meson.build
@@ -36,7 +36,7 @@ extra_settings = files('test/extra_settings.json')
 # TODO convert this into a proper test
 test('ara_tester',
    py3_inst,
-   args: [files('ara.py'), gpslogger_targets, '--os', 'FreeRTOS',
+   args: [files('ara.py'), freertos_icfg, '--os', 'FreeRTOS',
           '--log-level', 'debug',
           '--step-settings', extra_settings],
    env : ['PYTHONPATH=' + stepdir + ':' + graphdir]
