--- a/meson.build
+++ b/meson.build
@@ -19,6 +19,9 @@ subdir('common')
 subdir('libgraph')
 subdir('steps')
 subdir('appl')
+
+python_path = 'PYTHONPATH=' + ':'.join([source_dir, bgl_dir, graphdir, stepdir])
+
 subdir('test')
 
 dump_cmds = files('utils/dump_cmds.py')
@@ -27,7 +30,7 @@ ara = files('ara.py')
 sh = custom_target('ara-sh',
 	input: ara,
 	output: 'ara.sh',
-	command: [py3_inst, dump_cmds, '@OUTPUT@', '0o755', '#!/bin/sh\nPYTHONPATH=' + graphdir + ':' + stepdir + ' ' + (source_dir / 'ara.py') + ' $@\n'],
+	command: [py3_inst, dump_cmds, '@OUTPUT@', '0o755', '#!/bin/sh\n' + python_path + ' ' + (source_dir / 'ara.py') + ' $@\n'],
 	build_by_default: true
 )
 
@@ -39,36 +42,36 @@ test('ara_tester',
    args: [files('ara.py'), freertos_icfg, '--os', 'FreeRTOS',
           '--log-level', 'debug',
           '--step-settings', extra_settings],
-   env : ['PYTHONPATH=' + stepdir + ':' + graphdir]
+   env : [python_path]
 )
 
 test('gpslogger',
    py3_inst,
    args: [files('ara.py'), gpslogger_targets, '--os', 'FreeRTOS', '--log-level', 'debug'],
-   env : ['PYTHONPATH=' + stepdir + ':' + graphdir]
+   env : [python_path]
 )
 
 test('smartplug',
    py3_inst,
    args: [files('ara.py'), smartplug_targets, '--os', 'FreeRTOS', '--log-level', 'debug'],
-   env : ['PYTHONPATH=' + stepdir + ':' + graphdir]
+   env : [python_path]
 )
 
 test('copter-without-alarms',
    py3_inst,
    args: [files('ara.py'), osek_copter_without_alarms[0], '--os', 'OSEK', '--oilfile', osek_copter_without_alarms[1], '--log-level', 'debug'],
-   env : ['PYTHONPATH=' + stepdir + ':' + graphdir]
+   env : [python_path]
 )
 
 test('copter',
    py3_inst,
    args: [files('ara.py'), osek_coptermok[0], '--os', 'OSEK', '--oilfile', osek_coptermok[1], '--log-level', 'debug'],
-   env : ['PYTHONPATH=' + stepdir + ':' + graphdir]
+   env : [python_path]
 )
 
 
 test('ospert',
    py3_inst,
    args: [files('ara.py'), freertos_ospert, '--os', 'FreeRTOS', '--log-level', 'debug'],
-   env : ['PYTHONPATH=' + stepdir + ':' + graphdir]
+   env : [python_path]
 )
